--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <version>3.4.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
